--- a/Section 1.html
+++ b/Section 1.html
@@ -323,7 +323,7 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <p>Read the <a href="https://www.essex.ac.uk/-/media/documents/directories/reo/the-responsible-use-of-metrics-at-the-university-of-essex.pdf" target="_blank">University responsible metrics policy</a></p>
 <p>Visit our <a href="https://library.essex.ac.uk/research-visibility/intro" target="_blank">Libguide on Metrics</a></p>
-<p>Specific question? Contact us at ressup@essex.ac.uk</p>
+<p>Specific question? Contact the Research Services team at ressup@essex.ac.uk</p>
 <p>Further Resources external to the University:</p>
 <ul>
 <li>Deakin Library Metrics Toolkit: <a href="https://deakin.libguides.com/research-metrics/about" target="_blank">https://deakin.libguides.com/research-metrics/about</a>.</li>
