--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-ea385d0e468b0dd5ea5bf0780b1290d9.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-025db3b089a7e65f2676a8a92be6aa8b.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-a6cb8b00d52e44bfe076b25afc5475c7.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -223,7 +223,7 @@ ul.task-list li input[type="checkbox"] {
 <li>Anyone involved in recruitment, reward and recognition processes or grant applications where research may be used as an assessment tool.</li>
 </ul>
 <p>Everyone should complete Section 1, 2, and 3. Section 4 is for those who are involved in recruitment, reward and recognition processes, or grant applications as an assessor of people.</p>
-<p>For help please contact the Library metrics team via eprints@soton.ac.uk</p>
+<p>For help please contact the Library metrics team via ressup@essex.ac.uk</p>
 
 
 </section>
