deploy: cb7de5cc7e20fe85ff06526716e245b80cb12360

--- a/Section 4.html
+++ b/Section 4.html
@@ -257,7 +257,7 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>Some metrics are software/database specific, some of which are available via subscription only and therefore may not be available to all candidates.</li>
 </ul></li>
-<li>Ask the metrics service to provide metrics for the group of candidates so that everyone will be assessed in the same way at the same time. Please contact us at <a href="mailto:eprints@soton.ac.uk">eprints@soton.ac.uk</a> to discuss.</li>
+<li>Ask the metrics service to provide metrics for the group of candidates so that everyone will be assessed in the same way at the same time. Please contact us at <a href="mailto:ressup@essex.ac.uk">ressup@essex.ac.uk</a> to discuss.</li>
 </ul>
 </section>
 <section id="limitations-of-metrics-and-things-to-be-aware-of" class="level3">
