--- a/Section 1.html
+++ b/Section 1.html
@@ -82,7 +82,7 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
     <a href="./index.html" class="navbar-brand navbar-brand-logo">
-    <img src="./images/Essex PNG.png" alt="" class="navbar-logo">
+    <img src="./images/Essex.png" alt="" class="navbar-logo">
     </a>
     <a class="navbar-brand" href="./index.html">
     <span class="navbar-title">Responsible Research Metrics Self Study Module</span>
