deploy: d1577f64743121c87671ed1ee2853cc9f412e434

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
     <a href="./index.html" class="navbar-brand navbar-brand-logo">
-    <img src="./images/Essex PNG.png" alt="" class="navbar-logo">
+    <img src="./images/Essex.png" alt="" class="navbar-logo">
     </a>
     <a class="navbar-brand" href="./index.html">
     <span class="navbar-title">Responsible Research Metrics Self Study Module</span>
@@ -649,7 +649,7 @@ ul.task-list li input[type="checkbox"] {
       &nbsp;
     </div>   
     <div class="nav-footer-center">
-<p>Created by the Kate Lapage, Clare Hemmings and Lorrayne Smith @ University of Southampton Library shared under a CC BY licence</p>
+<p>Adapted by Hannah Crago, at the University of Essex, from the module created by the Kate Lapage, Clare Hemmings and Lorrayne Smith @ University of Southampton Library, shared under a CC BY licence</p>
 <div class="toc-actions"><ul><li><a href="https://github.com/ressup-essex/responsible-metrics/edit/main/index.qmd" class="toc-action"><i class="bi bi-github"></i>Edit this page</a></li><li><a href="https://github.com/ressup-essex/responsible-metrics/issues/new" class="toc-action"><i class="bi empty"></i>Report an issue</a></li></ul></div></div>
     <div class="nav-footer-right">
       &nbsp;
