deploy: 457a7bdb0f0d47519c650c24645df82af6f9d2b8

--- a/Section 2.html
+++ b/Section 2.html
@@ -233,7 +233,7 @@ ul.task-list li input[type="checkbox"] {
 <li>anyone who is interested in how metrics contribute to research assessment;</li>
 <li>anyone who is involved in assessing research where metrics may be used as an assessment tool.</li>
 </ul>
-<p>In this this section you will explore:</p>
+<p>In this section you will explore:</p>
 <ul>
 <li>guidance on how to use metrics in research assessment;</li>
 <li>an example question.</li>
@@ -279,7 +279,7 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>Date i.e.&nbsp;is one paper newer?</li>
 <li>Open access status – can one paper be accessed by a wider potential audience?</li>
-<li>Journal – if you unable to explain a difference in metrics between two outputs using the information you have, you may want to look at the publication. For example, it may be that one paper was published in a society journal, while the other was published in a multidisciplinary journal, explaining a difference in attention.</li>
+<li>Journal – if you are unable to explain a difference in metrics between two outputs using the information you have, you may want to look at the publication. For example, it may be that one paper was published in a society journal, while the other was published in a multidisciplinary journal, explaining a difference in attention.</li>
 </ul>
 <p>Let’s work it through with some hypothetical data.</p>
 <p><em>A.N.Other (2021) Sample paper titled X, Journal of Things,</em></p>
