deploy: 981b863a2cce70ad1beace98cf775e4c6ec5870f

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ul.task-list li input[type="checkbox"] {
 <li>Anyone involved in recruitment, reward and recognition processes or grant applications where research may be used as an assessment tool.</li>
 </ul>
 <p>Everyone should complete Section 1, 2, and 3. Section 4 is for those who are involved in recruitment, reward and recognition processes, or grant applications as an assessor of people.</p>
-<p>For help please contact the Library metrics team via ressup@essex.ac.uk</p>
+<p>For help please contact the Library metrics team via <a href="mailto:ressup@essex.ac.uk">ressup@essex.ac.uk</a>.</p>
 
 
 </section>
