deploy: 2d31a17faa740ee7d3365bbfa22b549888867f53

--- a/Section 3.html
+++ b/Section 3.html
@@ -262,7 +262,7 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <p>Some of these databases are free to use with an account(*) and some of these are accessible via University of Essex subscriptions(<sup>+</sup>). They all have a search function which will allow you to search for your name and/or Researcher ID such as <a href="https://support.orcid.org/hc/en-us" target="_blank">ORCID</a> and from there you can review how your research has been indexed by these systems.&nbsp;</p>
 <p>Using more than one source of metrics is a good practice as systems index at different rate and speeds.&nbsp;</p>
-<p>Contact the Research Support Team via ressup@essex.ac.uk for support, with as much notice as possible.&nbsp;</p>
+<p>Contact the Research Support Team via <a href="mailto:ressup@essex.ac.uk">ressup@essex.ac.uk</a> for support, with as much notice as possible.&nbsp;</p>
 </section>
 <section id="limitations-of-metrics" class="level3">
 <h3 class="anchored" data-anchor-id="limitations-of-metrics"><strong>Limitations of Metrics</strong>&nbsp;</h3>
