deploy: 9abca71d5296cc8013e8470958b69b32b932e3aa

--- a/Section 4.html
+++ b/Section 4.html
@@ -290,7 +290,7 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="whats-next"><strong>What’s next?</strong></h3>
 <p>Read the <a href="https://www.essex.ac.uk/-/media/documents/directories/reo/the-responsible-use-of-metrics-at-the-university-of-essex.pdf" target="_blank">University responsible metrics policy</a></p>
 <p>Visit our <a href="https://library.essex.ac.uk/research-visibility/intro" target="_blank">Libguide on Metrics</a></p>
-<p>Specific question? Contact us at <a href="mailto:ressup@essex.ac.uk">ressup@essex.ac.uk</a>.</p>
+<p>Specific question? Contact us at ressup@essex.ac.uk</p>
 <p>Further Resources external to the University:</p>
 <ul>
 <li>Deakin Library Metrics Toolkit: <a href="https://deakin.libguides.com/research-metrics/about" target="_blank">https://deakin.libguides.com/research-metrics/about</a></li>
